# syft-flwr

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  RELEASE.md  justfile  pyproject.toml
.github/workflows/: bump.yml  integration-gdrive-test.yaml  integration-inmemory-test.yaml  integration-test.yaml  publish.yml  release.yml  test.yaml  unit-test.yaml
docs/: message_flow.md
examples/: run.py
examples/basic/: client.py  client_app.py  client_syft.py  client_syft_event.py  local_dev.md  run_with_syftbox.py  server.py  server_app.py  server_syft.py
examples/basic/flower/: README.md  pyproject.toml
examples/basic/syftbox/: client_syft_event.py  server.py
examples/embedded-devices/: pyproject.toml
examples/embedded-devices/embeddedexample/: client_app.py  task.py
examples/fl-diabetes-prediction/: README.md  do.ipynb  ds.ipynb
examples/fl-diabetes-prediction/fl-diabetes-prediction/: pyproject.toml
examples/fl-tabular/: pyproject.toml
examples/fl-tabular/fltabular/: client_app.py  server_app.py  task.py
examples/med-mnist/: README.md  pyproject.toml
examples/med-mnist/med_mnist/: task.py
examples/quickstart/: README.md  pyproject.toml  run.py  run_with_syftbox.py
examples/quickstart-pytorch/: README.md  generate_dataset.py  main.py  pyproject.toml
examples/quickstart-pytorch-syft/pytorch/: client_app.py  server_app.py
examples/quickstart-pytorch/pytorch/: client_app.py  server_app.py  task.py
examples/quickstart/quickstart/: __init__.py  client_app.py  server_app.py  task.py
examples/quickstart_pytorch/: pyproject.toml  run_with_syftbox.py
examples/quickstart_pytorch/pytorch/: client_app.py  server_app.py
examples/rds-flwer-runner/: main.py  run.sh
examples/serverapp/: server.py
examples/vertical-fl/: pyproject.toml
examples/vertical-fl/bankmarketing/: model.py  server.py  strategy.py  utils.py
experimental/: random_file_creator.py  watchdog_observer.py
notebooks/: DO-RDS.ipynb  DS-RDS.ipynb  flower.ipynb  full_flow_folder.ipynb  pytorch-example.ipynb  server.ipynb
notebooks/Demo/: DO.ipynb  DS.ipynb
notebooks/Demo-FL-CNN-Cifar10-InMemory/: README.md  do1.ipynb  ds.ipynb  template.py.tpl  utils.py
notebooks/Demo-FL-CNN-Cifar10-InMemory/quickstart-pytorch/: README.md
notebooks/Demo-FL-Diabetes-Prediction/: README.md  do.ipynb  ds.ipynb
notebooks/Demo-FL-Diabetes-Prediction/fl-diabetes-prediction/: pyproject.toml
notebooks/RDS-Demo/: do1.ipynb  do2.ipynb  ds.ipynb  template.py  template.py.tpl  utils.py
notebooks/RDS-Demo-E2E/: do1.ipynb  do2.ipynb  ds.ipynb  utils.py
notebooks/RDS-Demo-tabular/: do2.ipynb  ds.ipynb
notebooks/dataset_loading/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/federated-analytics/: README.md  do.ipynb  do1.ipynb  do2.ipynb  ds.ipynb  pyproject.toml
notebooks/federated-analytics-diabetes/: README.md  do1.ipynb  do2.ipynb  ds.ipynb  pyproject.toml
notebooks/federated-analytics-diabetes/distributed/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/federated-analytics-diabetes/fed-analytics-diabetes/: README.md  pyproject.toml
notebooks/federated-analytics-diabetes/fed-analytics-diabetes/fed_analytics_diabetes/: client_app.py  server_app.py
notebooks/federated-analytics-diabetes/local/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/federated-analytics-quickstart/: README.md  do1.ipynb  do2.ipynb  ds.ipynb
notebooks/federated-analytics-quickstart/quickstart-pandas/: pyproject.toml
notebooks/federated-analytics/fed_analytics/: __init__.py  client_app.py  server_app.py
notebooks/federated-analytics/quickstart-pandas/: pyproject.toml
notebooks/federated-analytics/quickstart-pandas/pandas_example/: client_app.py  server_app.py
notebooks/fedrag/: .gitignore  FEDRAG-ROADMAP.md  README.md  README2.md  pyproject.toml
notebooks/fedrag/data/: download.py  prepare.py
notebooks/fedrag/data_prepare/: prepare.py
notebooks/fedrag/data_processing/: data_processing.py
notebooks/fedrag/distributed/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/fl-cnn-cifar10/: ds.ipynb  utils.py
notebooks/fl-diabetes-prediction/: README.md  do.ipynb  do1.ipynb  do2.ipynb  ds.ipynb  local_training.ipynb  pyproject.toml
notebooks/fl-diabetes-prediction/distributed/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/fl-diabetes-prediction/distributed-gdrive/: README.md  do1.ipynb  do2.ipynb  ds.ipynb
notebooks/fl-diabetes-prediction/fl-diabetes-prediction/: README.md  pyproject.toml
notebooks/fl-diabetes-prediction/fl-diabetes-prediction/fl_diabetes_prediction/: client_app.py  server_app.py  task.py
notebooks/fl-diabetes-prediction/local/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/fl-tabular/: do1.ipynb  ds-demo.ipynb  ds.ipynb  save_flwr_datasets.py  template.py.tpl  utils.py
notebooks/fl-xor/: README.md
notebooks/med-mnist/: client.py  main.py  pyproject.toml  server.py
notebooks/med-mnist/med_mnist/: __init__.py  client_app.py  server_app.py
notebooks/pre_loaded_rds_demo/: do1.ipynb  do2.ipynb  ds.ipynb
notebooks/vertical-fl-bank-marketing/: README.md  do_1.ipynb  do_2.ipynb  ds.ipynb  pyproject.toml
notebooks/vertical-fl-bank-marketing/local/: do_1.ipynb  do_2.ipynb  ds.ipynb
notebooks/vertical-fl-bank-marketing/scripts/: explore_dataset.ipynb  prepare_data.py
notebooks/vertical-fl-bank-marketing/vertical-fl/: pyproject.toml
notebooks/vertical-fl-bank-marketing/vertical-fl/bankmarketing/: client.py  server.py  strategy.py  utils.py
scripts/: create_token.py  test.sh
src/syft_flwr/: __init__.py  bootstrap.py  cli.py  client_syft_event.py  config.py  constant.py  driver.py  flower_client.py  flower_server.py  flwr_compatibility.py  gdrive_io.py  grid.py  main.py  mounts.py  release.py  run.py  run_simulation.py  runner.py  serde.py  server.py  strategy.py  syft_conf.toml  utils.py
tests/: bootstrap_encryption_keys_test.py  conftest.py  run_simulation_test.py  test_bootstrap_keys.py
tests/e2e/: basic_test.py
tests/integration/: fl_diabetes_syft_client_test.py
tests/unit/: bootstrap_encryption_keys_test.py  run_simulation_test.py  serde_test.py
(+56 files in other folders)
