[project]
name = "syft-flwr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flwr[simulation]==1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "syft-core",
    "syft-rpc",
    "syft-event",
    "syft-rds",
    "loguru>=0.7.3",
    "safetensors>=0.5.0",
    "typing-extensions>=4.13.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "syft-rds",
]

[project.scripts]
syft_flwr = "syft_flwr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["examples", "notebooks", "justfile"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
]

[tool.uv.sources]
syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", rev = "main" }
syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
syft-rds = { git = "https://github.com/OpenMined/rds.git", subdirectory = "syft-rds", rev = "khoa/jobs_folder_submission" }

[tool.hatch.build.targets.wheel]
packages = ["src/syft_flwr"]

[tool.ruff]
exclude = [".archive"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
