[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "syft-flower"

[tool.flwr.app.components]
serverapp = "pytorch.server_app:app"
clientapp = "pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.syft_flwr]
datasites = ["b@openmined.org", "c@openmined.org" ]
aggregator = "a@openmined.org"