[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pytorch"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "syft_flwr==0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "syft-flower"

[tool.flwr.app.components]
serverapp = "pytorch.server_app:app"
clientapp = "pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 10

[tool.syft_flwr]
datasites = [
    "yash@openmined.org",
    "rasswanth@openmined.org",
]
aggregator = "khoa@openmined.org"

[tool.uv.sources.syft-flwr]
path = "../../"
editable = true
