[project]
name = "federated-analytics-diabetes"
version = "0.1.0"
description = "Diabetes analytics with syft_flwr and SyftBox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr-datasets>=0.5.0",
    "flwr[simulation]==1.17.0",
    "syft-flwr>=0.1.5",
    "jupyterlab>=4.4.4",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]
