[project]
name = "federated-analytics-diabetes"
version = "0.1.0"
description = "Diabetes analytics with syft_flwr and SyftBox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "syft-flwr>=0.4.2",
    "flwr-datasets>=0.5.0",
    "jupyterlab>=4.4.5",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "numpy>=2.3.2",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]

# [tool.uv.sources]
# syft-flwr = { path = "../../", editable = true }  # for development
