[project]
name = "fl-diabetes-prediction-workspace"
version = "0.1.0"
description = "Workspace for diabetes prediction using federated learning with Flower and Syft"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "syft-flwr>=0.5.0",
    "flwr-datasets>=0.5.0",
    "imblearn>=0.0",
    "jupyterlab>=4.4.4",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "ipywidgets>=8.1.7",
    "scikit-learn==1.7.1",
    "torch>=2.8.0",
    "ray==2.52.1",
]

[tool.uv.sources]
# syft-flwr = { path = "/Users/khoaguin/Desktop/projects/OpenMined/syft-flwr", editable = true }  # local development
syft-flwr = { git = "https://github.com/OpenMined/syft-flwr/", branch = "main" }  # for development

[tool.uv]
package = false
