[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "fed-analytics-diabetes"
version = "1.0.0"
description = "Federated Analytics with Pandas, Flower and syft_flwr (Diabetes Data)"
license = "Apache-2.0"
authors = [
    { name = "OpenMined", email = "info@openmined.org" },
]
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.5.0",
    "numpy>=2.0.2",
    "pandas==2.2.3",
    "syft_flwr==0.1.5",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fed_analytics_diabetes.server_app:app"
clientapp = "fed_analytics_diabetes.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-sample = 1.0
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 2

[tool.syft_flwr]
app_name = "khoa@openmined.org_fed-analytics-diabetes_1752540460"
datasites = [
    "flower-test-group-1@openmined.org",
    "flower-test-group-2@openmined.org",
]
aggregator = "khoa@openmined.org"
