[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "marketing-prediction"
version = "1.0.0"
description = "Federated Learning for Marketing Prediction"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.17.0",
    "flwr-datasets>=0.5.0",
    "torch==2.7.0",
    "imblearn",
    "pandas",
    "scikit-learn==1.6.1",
    "loguru",
    "jupyter",
    "syft_flwr==0.1.5",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "OpenMined"

[tool.flwr.app.components]
serverapp = "bankmarketing.server:app"
clientapp = "bankmarketing.client:app"

[tool.flwr.app.config]
num-server-rounds = 2
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 2

[tool.syft_flwr]
app_name = "nutorbitx@gmail.com_marketing-prediction_1753160246"
datasites = [
    "do_1@gmail.com",
    "do_2@gmail.com",
]
aggregator = "nutorbitx@gmail.com"
